# Demo-Projects

./: README.md  package.json  vite.config.js
project2/: .gitignore  README.md  __init__.py  client.py  models.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
project2/backend/: .env.example  package.json  tsconfig.json
project2/backend/src/: app.ts  server.ts
project2/backend/src/config/: env.ts
project2/backend/src/controllers/: environment.controller.ts  game.controller.ts  guess.controller.ts  health.controller.ts
project2/backend/src/game-logic/: guess-game.engine.ts
project2/backend/src/middleware/: error-handler.ts  request-logger.ts
project2/backend/src/routes/: game.routes.ts  health.routes.ts  index.ts
project2/backend/src/services/: environment.service.ts  game.service.ts  gameEngine.js  gameGrader.js  health.service.ts
project2/frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
project2/frontend/src/: index.css  main.tsx
project2/frontend/src/app/: navigation.ts  router.tsx
project2/frontend/src/layouts/: AppLayout.tsx
project2/frontend/src/lib/: env.ts
project2/frontend/src/pages/: HomePage.tsx  ResultsDashboardPage.tsx  SimulationArenaPage.tsx
project2/scalar_grid_env/: __init__.py  client.py  models.py
project2/scalar_grid_env/server/: __init__.py  app.py  grid_environment.py
project2/server/: Dockerfile  app.py  grid_environment.py  requirements.txt
project2/shared/: package.json  tsconfig.json
project2/shared/src/: index.ts
(+80 files in other folders)
